# nubGL

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
core/include/: Common.h  Instrumentor.h  Logger.h  Profiler.h
core/src/: Logger.cpp  Profiler.cpp
graphics/opengl/include/: GLBuffer.h  GLBufferLayout.h  GLError.h  IndexBuffer.h  OrthographicCamera.h  Renderer2D.h  Shader.h  Texture.h  Texture2D.h  TextureConverter.h  TextureConverterV1.h  TextureConverterV2.h  VertexArray.h  VertexBuffer.h
graphics/opengl/src/: IndexBuffer.cpp  OrthographicCamera.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
lib/imgui/: CMakeLists.txt
lib/stb_image/: stb_image.cpp  stb_image.h  stb_image_write.cpp
res/Shaders/: default.vert
src/: main.cpp  test.cpp
src/assets/Shaders/: default.frag  default.vert
src/include/: Common.h  EBO.h  GLBuffer.h  GLBufferLayout.h  GLError.h  IndexBuffer.h  Renderer.h  Shader.h  ShaderClass.h  Singleton.h  Texture.h  Utils.h  VAO.h  VBO.h  VertexArray.h  VertexBuffer.h
src/res/Shaders/: default.frag  default.vert
src/src/: EBO.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  ShaderClass.cpp  Texture.cpp  VAO.cpp  VBO.cpp  VertexArray.cpp  VertexBuffer.cpp
test/: imgui_test_main.cpp  test.cpp
tests/: Test.h  Test3D.h  TestBatchRenderingV1.h  TestBatchRenderingV2.h  TestClearColor.h  TestDebugLayer.h  TestEBO.h  TestTexture2D.h  TestVBO.h  Tests.h
tests/res/Shaders/: test_3D.frag  test_3D.vert  test_BRV1.frag  test_BRV2.vert  test_ebo.frag  test_ebo.vert  test_texture2D.frag  test_texture2D.vert  test_vbo.frag  test_vbo.vert
tests/src/: Test3D.cpp  TestBatchRenderingV2.cpp  TestBatchRenderningV1.cpp  TestClearColor.cpp  TestEBO.cpp  TestTexture2D.cpp  TestVBO.cpp  imgui_test_main.cpp  main.cpp  test.cpp
